[package]
name = "llmkey_pool"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"]}
serde = { version = "1.0", features = ["derive"] } # For derive macros with serde_json
toml = "0.9.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3"}
# tower = "<latest-version>"
# 
# 
